Pushing final changes

--- a/Pyber/pyber_challenge.ipynb
+++ b/Pyber/pyber_challenge.ipynb
@@ -1,8 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Observable Trends - Pyber"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following trends can be seen from the data below:\n",
+    "1. The highest average fares are found in rural cities.  Unfortunately, the lowest number of rides is also found in rural cities.\n",
+    "2. The highest number of rides taken is found in urban cities.  The fares are generally low which indicate that the rides are short.  In addition, the highest percentage of Pyber drivers is found in urban cities indicating that there is a high level of competition.\n",
+    "3. Suburban drivers take less than rides than urban drivers and earn more per ride on average.  One could conclude that, to make the most per ride while saving wear and tear on your vehicle, driving in a suburban city might be preferred."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +117,7 @@
        "4             5  Urban  "
       ]
      },
-     "execution_count": 374,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -199,8 +216,7 @@
     "\n",
     "# Save Figure\n",
     "plt.savefig(\"images/Pyber_Bubble_Plot2\", bbox_inches = 'tight')\n",
-    "\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   },
   {
@@ -212,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -352,39 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 297,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 295,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 258,
    "metadata": {},
    "outputs": [],
    "source": []
